Добавление маршрутов для продуктов и описание для swagger
