# app/Http/Controllers/ProductController.php
@@ -1,0 +1,94 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use App\Http\Resources\ProductResource;
+use App\Models\Product;
+use Illuminate\Http\Request;
+
+/**
+ * @OA\Tag(
+ *     name="Products",
+ *     description="API Endpoints for Products"
+ * )
+ */
+class ProductController extends Controller
+{
+    /**
+     * @OA\Get(
+     *     path="/api/products",
+     *     summary="Список продуктов",
+     *     tags={"Products"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items(ref="#/components/schemas/Product")
+     *         )
+     *     )
+     * )
+     */
+    public function index()
+    {
+        $products = Product::with('category')->get();
+
+        return ProductResource::collection($products);
+    }
+
+
+    /**
+     * @OA\Get(
+     *     path="/api/products/{id}",
+     *     summary="Получить продукт по ID",
+     *     tags={"Products"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="Product ID",
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Product details",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="product",
+     *                 ref="#/components/schemas/Product"
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Ресурс не найден",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 property="message",
+     *                 type="string",
+     *                 example="Запрашиваемый ресурс не существует"
+     *             )
+     *         )
+     *     ),
+     * )
+     */
+    public function show(string $id)
+    {
+        $product = Product::with('category')->find($id);
+
+        if (!$product) {
+            return response()->json([
+                'message' => 'Ресурс не найден',
+                'errors' => [
+                    'id' => ['Запрашиваемый ресурс не существует']
+                ]
+            ], 404);
+        }
+
+        return new ProductResource($product);
+    }
+}
